--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "pagination",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
+  "type": "module",
   "scripts": {
     "start:build": "tsc -w",
-    "start:run": "nodemon ./build/index.js",
+    "start:run": "nodemon ./build/server.js",
     "start": "concurrently npm:start:*"
   },
   "keywords": [],
@@ -20,6 +21,6 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "concurrently": "^8.0.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   }
 }
