losely coupled principle

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start:build": "tsc -w",
-    "start:run": "nodemon ./build/server.js",
+    "start:run": "nodemon ./dist/server.js",
     "start": "concurrently npm:start:*"
   },
   "keywords": [],
